--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,7 +9,15 @@
             <Entry x:Name="lastNameEntry" Placeholder="Enter Last Name"/>
             <Entry x:Name="emailEntry" Placeholder="Enter email"/>
             <Entry x:Name="phoneEntry" Placeholder="Enter phone number"/>
-            <Entry x:Name="roleEntry" Placeholder="Enter user role"/>
+            <Picker x:Name="rolePicker" Title="Select user role">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>Admin</x:String>
+                        <x:String>Operations Manager</x:String>
+                        <x:String>Environmental Scientist</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
             <Button x:Name="saveButton" Text="Save" Clicked="saveButton_Clicked"/>
         </VerticalStackLayout>
         <ListView x:Name="listView" FlexLayout.Grow="1" HasUnevenRows="True" ItemTapped="listView_ItemTapped">
