--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -19,6 +19,8 @@
                 </Picker.ItemsSource>
             </Picker>
             <Button x:Name="saveButton" Text="Save" Clicked="saveButton_Clicked"/>
+            <Button x:Name="backupButton" Text="Backup Database" Clicked="BackupButton_Clicked"/>
+            <Button x:Name="restoreButton" Text="Restore Database" Clicked="RestoreButton_Clicked"/>
         </VerticalStackLayout>
         <ListView x:Name="listView" FlexLayout.Grow="1" HasUnevenRows="True" ItemTapped="listView_ItemTapped">
             <ListView.ItemTemplate>
