--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SECWRework.MainPage">
+             x:Class="SECWRework.Views.MainPage">
 
     <FlexLayout Direction="Column">
         <VerticalStackLayout Padding="10" FlexLayout.Basis="400" BackgroundColor="LightGray">
@@ -18,9 +18,9 @@
                     </x:Array>
                 </Picker.ItemsSource>
             </Picker>
-            <Button x:Name="saveButton" Text="Save" Clicked="saveButton_Clicked"/>
-            <Button x:Name="backupButton" Text="Backup Database" Clicked="BackupButton_Clicked"/>
-            <Button x:Name="restoreButton" Text="Restore Database" Clicked="RestoreButton_Clicked"/>
+            <Button Text="Save" Command="{Binding SaveCommand}" />
+            <Button Text="Backup Database" Command="{Binding BackupCommand}" />
+            <Button Text="Restore Database" Command="{Binding RestoreCommand}" />
         </VerticalStackLayout>
         <ListView x:Name="listView" FlexLayout.Grow="1" HasUnevenRows="True" ItemTapped="listView_ItemTapped">
             <ListView.ItemTemplate>
