--- a/App.xaml
+++ b/App.xaml
@@ -5,6 +5,11 @@
              x:Class="SECWRework.App">
     <Application.Resources>
         <ResourceDictionary>
+            <Style TargetType="Button" x:Key="SmallButtonStyle">
+            <Setter Property="WidthRequest" Value="80" />
+            <Setter Property="HeightRequest" Value="30" />
+            <Setter Property="FontSize" Value="12" />
+            </Style>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
