--- a/Views/AppShell.xaml
+++ b/Views/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="SECWRework.Views.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:SECWRework"
+    xmlns:local="clr-namespace:SECWRework.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="SECWRework">
 
