--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -3,17 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SECWRework.Views.MainPage">
 
-    <FlexLayout Direction="Column">
+    <FlexLayout BackgroundColor="black" Direction="Column">
 
-        <Button Text="Go to Sensor Page" Clicked="OnNavigateToSensorPageClicked" />
+        <Button BackgroundColor="beige" TextColor="Black" Text="Go to Sensor Page" Clicked="OnNavigateToSensorPageClicked" />
 
-        <VerticalStackLayout Padding="10" FlexLayout.Basis="400" BackgroundColor="LightGray">
+        <VerticalStackLayout Padding="10" FlexLayout.Basis="400" BackgroundColor="Black">
             <Entry Text="{Binding FirstName}" Placeholder="Enter First Name"/>
             <Entry Text="{Binding LastName}" Placeholder="Enter Last Name"/>
             <Entry Text="{Binding Email}" Placeholder="Enter email"/>
             <Entry Text="{Binding PhoneNumber}" Placeholder="Enter phone number"/>
             <Picker Title="Select user role" SelectedItem="{Binding SelectedRole}">
-                <Picker.ItemsSource>
+                <Picker.ItemsSource Text="Click to choose role">
                     <x:Array Type="{x:Type x:String}">
                         <x:String>Admin</x:String>
                         <x:String>Operations Manager</x:String>
@@ -22,9 +22,9 @@
                 </Picker.ItemsSource>
             </Picker>
 
-            <Button Text="Save" Command="{Binding SaveAsyncCommand}" />
-            <Button Text="Backup Database" Command="{Binding BackupAsyncCommand}" />
-            <Button Text="Restore Database" Command="{Binding RestoreAsyncCommand}" />
+            <Button BackgroundColor="beige" TextColor="Black" Text="Save" Command="{Binding SaveAsyncCommand}" />
+            <Button BackgroundColor="beige" TextColor="Black" Text="Backup Database" Command="{Binding BackupAsyncCommand}" />
+            <Button BackgroundColor="beige" TextColor="Black" Text="Restore Database" Command="{Binding RestoreAsyncCommand}" />
 
         </VerticalStackLayout>
         <ListView x:Name="listView" ItemsSource="{Binding Users}" SelectedItem="{Binding SelectedUser}" FlexLayout.Grow="1" HasUnevenRows="True">
@@ -45,14 +45,24 @@
                                     <ColumnDefinition Width="auto" />
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Text="{Binding FirstName}" FontSize="Medium" />
-                                <Label Grid.Column="1" Text="{Binding LastName}" FontSize="Medium" />
-                                <Label Grid.Column="2" Text="{Binding Email}" FontSize="Medium" />
-                                <Label Grid.Column="3" Text="{Binding PhoneNumber}" FontSize="Medium" />
-                                <Label Grid.Column="4" Text="{Binding SelectedRole}" FontSize="Medium" />                                                              
-                                <Button Grid.Column="5" Text="Edit" Command="{Binding EditUserCommand}" />
-                                <Button Grid.Column="6" Text="Delete" Clicked="OnDeleteUserClicked" />                                        
+                                <Label Grid.Column="2" Text="{Binding LastName}" FontSize="Medium" />
+                                <Label Grid.Column="4" Text="{Binding Email}" FontSize="Medium" />
+                                <Label Grid.Column="6" Text="{Binding PhoneNumber}" FontSize="Medium" />
+                                <Label Grid.Column="8" Text="{Binding SelectedRole}" FontSize="Medium" />                                                              
+                                <Button BackgroundColor="Beige" TextColor="Black" Grid.Column="9" Text="Edit" Command="{Binding EditUserCommand}" />
+                                <Button BackgroundColor="Beige" TextColor="Black" Grid.Column="10" Text="Delete" Clicked="OnDeleteUserClicked" />                                        
                             </Grid>
                         </VerticalStackLayout>
                     </ViewCell>
